// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render component 1`] = `
<Page
  navModel={Object {}}
>
  <PageContents
    isLoading={true}
  />
</Page>
`;

exports[`Render should render group sync page 1`] = `
<Page
  navModel={Object {}}
>
  <PageContents
    isLoading={true}
  >
    <Connect(TeamGroupSync) />
  </PageContents>
</Page>
`;

exports[`Render should render member page if team not empty 1`] = `
<Page
  navModel={Object {}}
>
  <PageContents
    isLoading={true}
  >
    <Connect(TeamMembers)
      syncEnabled={true}
    />
  </PageContents>
</Page>
`;

exports[`Render should render settings and preferences page 1`] = `
<Page
  navModel={Object {}}
>
  <PageContents
    isLoading={true}
  >
    <Connect(TeamSettings) />
  </PageContents>
</Page>
`;
